2012-09-10 Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Added several fields
	to events.

2012-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: refactoriced the code for the new Planned
	Downtime, now check the downtimes once and periodical and the
	subtypes of downtimes.
	
	* bin/pandora_server: cleaned source code style.

2012-08-29  Sergio Martin <sergio.martin@artica.es>

	* DEBIAN/control
	Makefile.PL
	pandora_server.spec
	pandora_server.redhat.spec: Added the perl JSON dependence
	to specs and the check to Makefile

2012-08-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: added in the modules the same feature to
	set agent in "Quiet" mode.

2012-08-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Server.pm:: added the feature to set a agent in
	"Quiet" mode.
	
	* lib/PandoraFMS/Core.pm, bin/pandora_server: cleaned source code
	style.

2012-08-20  Sergio Martin <sergio.martin@artica.es>

	* ChangeLog: Fixed bad description in last commit

2012-08-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_migrate_plugins.pl: fixed spaces
	between parameters

2012-08-17  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/EU_10yrspread.pl
	util/pandora_migrate_plugins.pl: Add plugin to 
	get the 10 year spread of several european countries
	and fix some bugs of the plugin migrate tool

2012-08-16 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/recon_scripts/snmpdevices.pl: Added several networks and ips
	to recon scripts.

2012-08-16  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Adapted the plugin server to
	new macros system and add check to timeout == 0

	* util/pandora_migrate_plugins.pl: Add a new migration script 
	MANDATORY when upgrade Pandora FMS 4.0.x to 5.0 to adapt the 
	existing plugins to new macros system

2012-08-16 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/recon_scripts/snmpdevices.pl: Added several communities